--- a/deploy/overlays/production/kustomization.yaml
+++ b/deploy/overlays/production/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - resources.yaml
   - deployment.yaml
   - external-secret.yaml
+  - http-route.yaml
 
 images:
   - name: docker-registry.bottle-note.com/profanity-api
