feat: k8s add Redis deployment and service for production environment

--- a/deploy/overlays/production/kustomization.yaml
+++ b/deploy/overlays/production/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - deployment.yaml
   - external-secret.yaml
   - http-route.yaml
+  - redis.yaml
 
 images:
   - name: docker-registry.bottle-note.com/profanity-api
